[gd_scene load_steps=6 format=2]

[ext_resource path="res://art/obstacles/YellowButtonFull.png" type="Texture" id=1]
[ext_resource path="res://art/obstacles/YellowButtonFlat.png" type="Texture" id=2]
[ext_resource path="res://scripts/YellowButton.gd" type="Script" id=3]
[ext_resource path="res://art/obstacles/YellowButtonHalf.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 4 ), ExtResource( 2 ) ],
"loop": false,
"name": "press",
"speed": 10.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 1 ) ],
"loop": false,
"name": "release",
"speed": 10.0
} ]

[node name="YellowButton" type="Area2D"]
position = Vector2( 487, 275 )
script = ExtResource( 3 )

[node name="ButtonAnimation" type="AnimatedSprite" parent="."]
position = Vector2( -18, -8 )
scale = Vector2( 0.0408711, 0.0408711 )
frames = SubResource( 1 )
animation = "press"
centered = false

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, 1.56164e-05 )
scale = Vector2( 1, 1.04167 )
polygon = PoolVector2Array( -10, 6, -10, -6, 10, -6, 10, 6 )

[connection signal="body_entered" from="." to="." method="_on_YellowButton_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_YellowButton_body_exited"]
